--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
@@ -30,6 +31,7 @@
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.10",
     "daisyui": "^3.7.4"
   }
 }
