--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.4",
+    "framer-motion": "^10.16.16",
     "next": "13.4.19",
     "next-pwa": "^5.6.0",
     "postcss": "8.4.29",
